2008-10-21  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/34670
	* gfortran.dg/transpose_2.f90:  New test.

2008-10-21  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/37669
	* gcc.c-torture/compile/pr37669-2.c: New test.

2008-10-21  Richard Guenther  <rguenther@suse.de>

	* gcc.dg/tree-ssa/alias-19.c: New testcase.

2008-10-20  Manuel López-Ibáñez  <manu@gcc.gnu.org>
        
	PR 12603
	* gcc.dg/pr12603.c: New testcase.

2008-10-20  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c++/37004
	* g++.dg/warn/Wconversion-pr34389.C: Remove XFAIL.

2008-10-19  Manuel López-Ibáñez  <manu@gcc.gnu.org>

	PR c/30260
	* gcc.dg/pr30260.c: New.

2008-10-19  Paul Thomas  <pault@gcc.gnu.org>

        PR fortran/37723
        * gfortran.dg/dependency_22.f90: New test.

2008-10-18  Danny Smith  <dannysmith@users.sourceforge.net>

	* gcc.dg/dll-2.c: Revert 2008-08-09 change (R138893): Change
        "dg-message" back to "dg-warning".
	* gcc.dg/dll-3.c: Likewise.

2008-10-16  Alexander Monakov  <amonakov@ispras.ru>

	PR target/37381
	* gcc.c-torture/compile/pr37381.c: New test.

2008-10-16  Joseph Myers  <joseph@codesourcery.com>

	PR c/33192
	* gcc.dg/imag-1.c: New test.

2008-10-16  Daniel Kraft  <d@domob.eu>

	* gfortran.dg/elemental_intrinsic_1.f03: New test.

2008-10-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/37664
	* gcc.c-torture/compile/pr37664.c: New test.

2008-10-16  Joseph Myers  <joseph@codesourcery.com>

	PR middle-end/37418
	* gcc.c-torture/compile/pr37418-1.c,
	gcc.c-torture/compile/pr37418-2.c,
	gcc.c-torture/compile/pr37418-3.c,
	gcc.c-torture/compile/pr37418-4.c: New tests.

2008-10-15  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/34670
	* gfortran.dg/reshape_3.f90:  New test.
	* gfortran.dg/reshape_4.f90:  New test.
	* gfortran.dg/reshape_order_1.f90:  Use correct shape.
	* gfortran.dg/reshape_order_2.f90:  Likewise.
	* gfortran.dg/reshape_order_3.f90:  Likewise.
	* gfortran.dg/reshape_order_4.f90:  Likewise.
